[package]
name = "flash"
version = "0.2.11"
edition = "2021"
authors = ["HJfod"]
description = "Documentation generator for C++"
readme = "README.md"
repository = "https://github.com/hjfod/flash"
license-file = "LICENSE"
keywords = ["documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = "1.0.2"
clap = { version = "4.0.29", features = ["derive"] }
glob = "0.3.0"
indicatif = "0.17.2"
serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
shlex = "1.1.0"
strfmt = "0.2.2"
toml = "0.5.10"
flash-macros = { path = "macros" }
tokio = { version = "1.23.1", features = ["full"] }
futures = "0.3.25"
percent-encoding = "2.2.0"
multipeek = "0.1.2"
pulldown-cmark = { version = "0.9.2", git = "https://github.com/SergioBenitez/pulldown-cmark", rev = "01d0d6d22a6c6fb390197be0739cb26b94bacf96" }
emojis = "0.5.2"
cached = "0.42.0"
serde_yaml = "0.9.17"
swc = "0.266.32"
swc_common = "0.32.1"
anyhow = "1.0.68"
minify-html = "0.10.8"
lightningcss = "1.0.0-alpha.39"
ico = "0.3.0"
